--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Neat Starter
+title: Stashbox
 path: home
 ---
 
@@ -13,9 +13,7 @@ path: home
   </h1>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
+    <code class="bg-gray-100 text-blue-800 p-1">建议将此页面加入到浏览器收藏夹</code>
   </p>
 
   {% include "./_includes/partials/content.html" %}
